@@ -18,6 +18,8 @@
 	all : added Lambda.indexOf and Lambda.concat
 	js, flash8: changed behavior when explicitely using 'null' for optional param with default value
 	all : no longer allow inline vars as metadata values
+	all : added -exclude-package compiler switch
+	all : added -include-package compiler switch
 
 2010-08-14: 2.06
 	neko : change serializer to be able to handle instances of basic classes from other modules
